:bug: add correct spacing for h6

--- a/public/stylesheets/styles.scss
+++ b/public/stylesheets/styles.scss
@@ -24,11 +24,11 @@ h1, h2, h3, h4, h5 {
   font-weight: normal;
 }
 
-h1, h3, h4, h5, h6 {
+h1, h3, h4, h5 {
   margin: 0 0 10px;
 }
 
-h2 {
+h2, h6 {
   margin: 0 0 20px;
 }
 
